@@ -34,6 +34,7 @@
     * You can configure parents now (via a host attribute, no rules are
       neccessary).
     * You can now do an automated scan for parents and layer 3 (IP)
+    * You can configure active checks (check_tcp, ...) via WATO now
     * FIX: fix page header after confirmation dialogs
     * FIX: Fixed umlaut problem in host aliases and ip addresses created by WATO
     * FIX: Fixed exception caused by validation problems during editing tags in WATO
